# ai_architect_final_srt

./: .env  README.md  dialapitest.py  main.py  main1.py  pyproject.toml  requirements.txt  uirouter.py
agents/: disaster_event_agent.py  filing_agent.py  general_agent.py  weather_agent.py
data/knowledge_base/calculations/: calculation_methods.md
data/knowledge_base/general/: annual_report_filings.md
data/vector_store/: chroma.sqlite3
evaluation/: tt.jsonl
mcp_client/: async_runner.py  client.py  client2.py  tool_executor.py
mcp_server/: server.py
mcp_server/tools/: event_search_tool.py  weather_tool.py
orchestration/: graph_runner.py  router.py  state.py  supervisor.py
scripts/: build_vector_store.py
services/: disaster_event_service.py  filing_service.py  weather_service.py
tests/classifiereval/: classifier_tests.jsonl  evaluator.py  models.py
tests/responseeval/: evaluator.py  models.py  response_tests.jsonl
utils/: models.py
views/: chatview.py  evaluationview.py
